trunk/Archive2/d2/46066ba246778d/output
main.cpp:3:11: error: 'const' qualifier may not be applied to a reference
    int & const r = i;
          ^
1 error generated.
